fixed: feedback for gap in between items for better reading #14 #12 #11

--- a/public/styles/styling.css
+++ b/public/styles/styling.css
@@ -235,7 +235,8 @@ nav {
   display: inline-block;
 }
 
-.select-button-1, .select-button-2 {
+.select-button-1,
+.select-button-2 {
   padding: 1em 5em 1em 1em;
   background-color: var(--background-color);
   border: 2px solid var(--fonts-color-1);
@@ -250,18 +251,18 @@ nav {
 }
 
 .select-container::after {
-  content: ""; 
+  content: "";
   border-left: none;
 }
 
 @supports (appearance: none) {
   .select-container::after {
-    content: "+"; 
+    content: "+";
     font-size: 1.5em;
     font-weight: 50;
     font-family: "Archivo", sans-serif;
     color: var(--fonts-color-1);
-    
+
     position: absolute;
     right: 15px;
     top: 0;
@@ -269,9 +270,9 @@ nav {
     height: 100%;
     display: flex;
     align-items: center;
-    
+
     padding-left: 10px;
-    border-left: 2px solid var(--fonts-color-1); 
+    border-left: 2px solid var(--fonts-color-1);
   }
 }
 
@@ -317,19 +318,19 @@ nav {
   justify-content: center;
 }
 
-
-
-
-
-
 .event-card-child-container {
   padding-top: 2em;
-
   display: flex;
   flex-direction: column;
-  gap: 2em;
-
   border-bottom: 2px solid var(--fonts-color-1);
+}
+
+.event-card-child-container > * {
+  margin-bottom: 1em;
+}
+
+.event-card-child-container > * :last-child {
+  margin-bottom: 0;
 }
 
 .event-card-child-container:last-child {
